# smb-acl-scanner

./: LICENSE  README.md  pyproject.toml  setup.py
smb-acl-scanner/: reader.py  resolver.py
smb_acl_scanner/: __init__.py  reader.py  resolver.py  well_known_sids.py
