[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "smb-acl-scanner"
version = "0.1.0"
description = "Python package for reading Windows ACLs via SMB with LDAP resolution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["smb", "acl", "windows", "ldap", "permissions", "security"]

dependencies = [
    "smbprotocol>=1.14.0",
    "ldap3>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
smb-acl-scan = "smb_acl_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/smb-acl-scanner"
Documentation = "https://github.com/yourusername/smb-acl-scanner#readme"
Repository = "https://github.com/yourusername/smb-acl-scanner"